--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kattia Contreras",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
